Fix screen overlap in all Preview features (#1118)
* Fix screen overlap in FeatureStorePreview feature

* Create utility class

* Add div container to preview features

* Fix overlap in cooperativeMembershipPreview feature

* Implement class in CLI template

--- a/feature-utils/poly-look/src/css/layout.css
+++ b/feature-utils/poly-look/src/css/layout.css
@@ -15,3 +15,10 @@
   font-family: var(--jost-medium);
   font-size: var(--font-size-xl);
 }
+
+.preview-screen-container {
+  position: absolute;
+  z-index: 99;
+  width: 100%;
+  height: 100%;
+}
